--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,10 @@ body {
     background-color: #F9FAFC;
 }
 
+img {
+    100%;
+}
+
 .brand {
     font-family: Lato, sans-serif;
     font-size: 1.4rem;
